<resources>
    <string name="app_name">FirebaseAuth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_title">Login</string>
    <string name="login_descp">Please sign in to continue.</string>
    <string name="login_register">Don\'t have an account? Sign up</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_title">Create Account</string>
    <string name="register_name">Full Name</string>
    <string name="register_login">Already have an account? Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>