<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="16dp"
    tools:context=".view.RegisterFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="128dp"
        android:textStyle="bold"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:text="@string/register_title" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="32dp"
        android:hint="@string/register_name"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_name"
        android:layout_marginTop="8dp"
        android:hint="@string/login_email"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:hint="@string/login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_email"
        android:inputType="textPassword"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_confirm_password"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:hint="@string/register_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_password"
        android:inputType="textPassword"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_title"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:text="@string/register_login" />

</androidx.constraintlayout.widget.ConstraintLayout>